--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "16.0.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
+    "daisyui": "^2.51.3",
     "dayjs": "^1.11.7",
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
