--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.16",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.24.10",
     "@types/react": "16.0.31",
@@ -24,7 +27,10 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.8.1"
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
