--- a/package.json
+++ b/package.json
@@ -15,31 +15,29 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.0",
     "@tailwindcss/forms": "^0.5.3",
-    "@tanstack/react-query": "^4.24.10",
     "@types/react": "16.0.31",
     "@types/react-dom": "16.0.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
-    "daisyui": "^2.51.3",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.7",
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
-    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "react-quill": "^2.0.0",
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
-    "zustand": "^4.3.7"
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
